# mariadb-auth-k8s

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.ci  Dockerfile.client  Dockerfile.client-old  Dockerfile.mariadb  IMPLEMENTATION_PLAN.md  Makefile  README.md  init-auth-plugin.sh  skaffold.yaml
.github/workflows/: ci-image.yml  ci.yml  release.yml
docs/: refactoring.md  sdk_compatibility.md
federated-k8s-auth/: Dockerfile  README.md  jest.config.js  package-lock.json  package.json
federated-k8s-auth/config/: clusters.example.yaml
federated-k8s-auth/src/: cluster-config.js  index.js  jwks-cache.js  server.js  validator.js
federated-k8s-auth/test/: server.test.js  validator.test.js
helm/mariadb-auth-k8s/: Chart.yaml  values.yaml
helm/mariadb-auth-k8s/templates/: configmap.yaml  deployment.yaml  service.yaml
include/: build-all-plugins.sh  entrypoint.sh  generate-version.sh
k8s/: mariadb-deployment.yaml  token-validator-configmap.yaml  token-validator-deployment.yaml  token-validator-serviceaccount.yaml
k8s.bak/: test-client.yaml  token-validator-secrets.yaml.example
k8s/cluster-a/: federated-k8s-auth-configmap.yaml  federated-k8s-auth-deployment.yaml  federated-k8s-auth-networkpolicy.yaml  federated-k8s-auth-service.yaml  federated-k8s-auth-serviceaccount.yaml  kube-federated-auth-configmap.yaml  kube-federated-auth-deployment.yaml  kube-federated-auth-networkpolicy.yaml  kube-federated-auth-service.yaml  kube-federated-auth-serviceaccount.yaml  mariadb-custom-config.yaml  mariadb-nodeport.yaml  namespace.yaml  rbac.yaml  test-clients.yaml  token-validator-configmap.yaml  token-validator-networkpolicy.yaml  token-validator-service.yaml
k8s/cluster-b/: namespace.yaml  test-client-remote.yaml
proxysql-k8s-auth/: IMPLEMENTATION_PLAN.md
scripts/: build.sh  deploy-to-kind.sh  download-headers.sh  generate-tls-certs.sh  setup-kind-clusters.sh  setup-multicluster.sh  test-auth.sh  test.sh
src/: auth_k8s.c  auth_k8s_api.c  auth_k8s_jwt.c  auth_k8s_server.c  auth_k8s_server_jwt.c  auth_k8s_tokenreview.c  auth_k8s_validator_api.c  jwt_crypto.c  jwt_crypto.h  k8s_jwt_validator.c  k8s_jwt_validator.h  k8s_token_validator.c  k8s_token_validator.h  tokenreview_api.c
test/e2e/: auth.bats  auth_go.bats  auth_java.bats  auth_node.bats  auth_pymysql.bats  auth_tls.bats  authz.bats  custom_config.bats  plugin_config.bats  sdk_helper.bash  test_helper.bash
test/e2e/scripts/: MariaDBTest.java  go_mysql_test.go  node_mysql_test.js  package.json  pymysql_test.py
test/unit/: test_tokenreview_api.c
token-validator-api/: .dockerignore  Dockerfile  README.md  package.json
token-validator-api/src/: cluster-config.js  oidc-discovery.js  server.js  validator.js
